homepage - fixed some spacing

--- a/my-podbox/src/app/page.module.css
+++ b/my-podbox/src/app/page.module.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .wrapper {
-  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   min-height: 100vh;
@@ -12,11 +11,10 @@
 
 .topmatter {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 1em;
   border-bottom: 2px solid #f4f4f4;
-  max-height: 100vh;
+  max-height: 50vh;
   
 }
 
@@ -65,7 +63,7 @@
   align-items: center;
   border-radius: 20px;
   margin-right: 20px;
-  flex: 1;
+  /* align-self: flex-end; */
 }
 
 .signUpButton {
